[gd_scene load_steps=2 format=3 uid="uid://c0xmltujk8v20"]

[ext_resource type="Script" path="res://Scripts/Actors/actor.gd" id="1"]

[node name="Actor" type="CharacterBody2D"]
script = ExtResource( "1" )

[node name="CollisionBox" type="CollisionShape2D" parent="."]
script = null

[node name="MoveStates" type="Node2D" parent="."]
script = null

[node name="HitArea" type="Area2D" parent="."]
script = null

[node name="HitBox" type="CollisionShape2D" parent="HitArea"]
script = null

[node name="Sprites" type="Node2D" parent="."]
script = null

[node name="StatusEffects" type="Node2D" parent="."]
script = null

[node name="Animators" type="Node2D" parent="."]
script = null

[node name="BaseAnimator" type="AnimationPlayer" parent="Animators"]
blend_times = []
script = null

[node name="ShaderAnimator" type="AnimationPlayer" parent="Animators"]
blend_times = []
script = null
